# Altron

./: .gitignore  README.md  ROADMAP.md
altcron/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json  start.bat
altcron/scripts/: install-piper-train.sh  install.ps1  process-voice.py  setup-piper-voice.bat  transcribe-voice.py
altcron/src/: index.ts
altcron/src/agents/context/: index.ts
altcron/src/agents/core/: index.ts
altcron/src/auth/: index.ts
altcron/src/config/: index.ts
altcron/src/gateway/: index.ts
altcron/src/llm/: index.ts
altcron/src/sessions/: index.ts
altcron/src/settings/: index.ts
altcron/src/state/: index.ts
altcron/tests/: agent-tools.test.ts  auth.test.ts  config.test.ts  context.test.ts  llm-client.test.ts  llm-fallback.test.ts  mcp.test.ts  memory.test.ts  planner.test.ts  rag-loader.test.ts  sessions.test.ts  settings.test.ts  skill-loader.test.ts  skill-registry.test.ts  tool-policy.test.ts  tool-registry.test.ts  vector-store.test.ts
altcron/tests/integration/: agent.test.ts  embedder.test.ts  llm-ollama.test.ts  retriever.test.ts
altcron/ui/: index.html  package-lock.json  package.json
altcron/ui/src/: App.tsx
altcron/ui/src-tauri/: Cargo.toml  tauri.conf.json
altcron/ui/src-tauri/capabilities/: default.json
altcron/ui/src-tauri/icons/: README.md
altcron/ui/src-tauri/src/: lib.rs  main.rs
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
(+50 files in other folders)
